tests/spec/non_conformant/errors/fn_varargs/with_default.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/fn-varargs/with-default.hrx"

// Ignoring "test", error tests are not supported yet.
